--- a/finalprojectgraphs.Rmd
+++ b/finalprojectgraphs.Rmd
@@ -107,4 +107,11 @@ sleep %>%
     theme(legend.position = "None",
           plot.title.position = "plot")
 ```
+```{r}
+sleep %>% 
+  mutate(percent_dreaming =  (Paradoxical.sleep..hrs.day./Total.sleep..hrs.day.) * 100) %>% 
+  ggplot() +
+  geom_col(aes(x = percent_dreaming, y = Species.of.animal))
+  
+```
 
