Circular Bar Graph

--- a/finalprojectgraphs.Rmd
+++ b/finalprojectgraphs.Rmd
@@ -112,9 +112,34 @@ sleep %>%
   mutate(percent_dreaming =  (Paradoxical.sleep..hrs.day./Total.sleep..hrs.day.) * 100) %>% 
   ggplot() +
   geom_col(aes(x = percent_dreaming, y = Species.of.animal, fill = Total.sleep..hrs.day.)) +
-  labs(title = "Dreams of Mammals",
+  labs(title = "How much do Mammals Dream",
        y = "",
        x = "Percentage of Hours Dreaming")
+  
+```
+```{r}
+sleep %>% 
+  group_by(Sleep.exposure.index) %>% 
+  arrange(Slow.wave.sleep..hrs.day.) %>% 
+  select(Species.of.animal, Slow.wave.sleep..hrs.day.,Sleep.exposure.index) %>% 
+  ggplot() +
+  geom_col(aes(y = Slow.wave.sleep..hrs.day., x = Species.of.animal, 
+               fill = Sleep.exposure.index)) +
+  geom_text(aes(y = Slow.wave.sleep..hrs.day. + 5, x=Species.of.animal, label= Species.of.animal), color="white", fontface="bold",alpha=0.6, size=2.5, inherit.aes = FALSE ) +
+  labs(title = "Sleep Breakdown",
+       y = "",
+       x = "") +
+  coord_polar(start = 0) +
+  ylim(-3,23) +
+   theme(
+    axis.text = element_blank(),
+    panel.grid = element_blank(),
+    plot.background = element_rect(fill = "black"),
+    panel.background = element_rect(fill = "black"),
+    legend.background = element_rect(fill = "black"),
+    plot.title = element_text(color = "white"),
+    legend.text = element_text(color = "white"),
+    legend.title = element_text(color = "white")) 
   
 ```
 
