--- a/finalprojectgraphs.Rmd
+++ b/finalprojectgraphs.Rmd
@@ -180,7 +180,8 @@ sleep %>%
     panel.grid.major.x = element_blank(),
     panel.grid.minor.x = element_blank(),
     panel.grid.major.y = element_blank(),
-    panel.grid.minor.y = element_blank()
+    panel.grid.minor.y = element_blank(),
+    legend.position = "none"
   ) +
   labs(x = "",
        y = "",
