--- a/finalprojectgraphs.Rmd
+++ b/finalprojectgraphs.Rmd
@@ -125,6 +125,8 @@ G1 <-
   geom_text(aes(y = Slow.wave.sleep..hrs.day. + 5, x=fct_reorder(Species.of.animal,Slow.wave.sleep..hrs.day.,median), label= Species.of.animal), color="white", fontface="bold",alpha=0.6, size= 2.5, inherit.aes = FALSE ) +
   scale_color_viridis_c(option = "magma") +
   labs(title = "Non-Dreaming Hours of Sleep per Day",
+       caption = "Pippa Gallagher and Joselyn Angeles",
+       subtitle = "This measures the number of hours of slow wave (non-dreaming) sleep each mammal, on avergae, has each night. The Sleep Measure Index determines how vulnerabel the mammal is when sleeping, with 1 being the least vulnerbale and 5 the most.",
        y = "",
        x = "",
        fill = "Sleep Exposure Index") +
@@ -133,14 +135,16 @@ G1 <-
    theme(
     axis.text.x = element_blank(),
     panel.grid = element_blank(),
-    plot.background = element_rect(fill = "black"),
-    panel.background = element_rect(fill = "black"),
-    legend.background = element_rect(fill = "black"),
+    plot.background = element_rect(fill = "#0a203b"),
+    panel.background = element_rect(fill = "#0a203b"),
+    legend.background = element_rect(fill = "#0a203b"),
     plot.title = element_text(color = "white"),
     legend.text = element_text(color = "white"),
     legend.title = element_text(color = "white"),
-    axis.text.y = element_text(color = "white")) +
-  scale_fill_gradient(high = "green", low = "darkgreen")
+    axis.text.y = element_text(color = "white"),
+    plot.caption = element_text(color = "white"),
+    plot.subtitle = element_text(color = "white")) +
+  scale_fill_gradient(high = "#2473db", low = "#c3deff")
   
 G1
 ```
@@ -149,31 +153,40 @@ G1
 ```{r}
 G2 <-
   sleep %>% 
+  filter(Species.of.animal %in% c("Horse", "Cow", "Pig", "Human", "Sheep", "Chimpanzee", "Goat", "Baboon", "Red fox", "Cat", "Rabbit", "Rat", "Ground squirrel", "Mouse")) %>% 
   select(Species.of.animal,Paradoxical.sleep..hrs.day. ,Sleep.exposure.index) %>% 
   ggplot() +
   geom_col(aes(y = Paradoxical.sleep..hrs.day., 
                x = fct_reorder(Species.of.animal,Paradoxical.sleep..hrs.day.,median),
                fill = Sleep.exposure.index)) +
-  geom_text(aes(y = Paradoxical.sleep..hrs.day. + 3, x=fct_reorder(Species.of.animal,Paradoxical.sleep..hrs.day.,median), label= Species.of.animal), color="white", fontface="bold",alpha=0.6, size=2.5, inherit.aes = FALSE ) +
+  geom_text(aes(y = Paradoxical.sleep..hrs.day. + 2, x=fct_reorder(Species.of.animal,Paradoxical.sleep..hrs.day.,median), label= Species.of.animal), color="white", fontface="bold",alpha=0.6, size=2.5, inherit.aes = FALSE ) +
   scale_color_viridis_c(option = "magma") +
-  labs(title = "Sleep Breakdown",
+  labs(title = "Dreaming Hours of Sleep per Day",
+       caption = "Pippa Gallagher and Joselyn Angeles",
+       subtitle = "This measures the number of hours of paradoxical (dreaming) sleep each mammal, on avergae, has each night. The Sleep Measure Index determines how vulnerabel the mammal is when sleeping, with 1 being the least vulnerbale and 5 the most.",
        y = "",
        x = "",
        fill = "Sleep Exposure Index") +
   coord_polar(start = 0) +
-  ylim(-1,15) +
-   theme(
-    axis.text = element_blank(),
+  ylim(-1.5,6) +
+     theme(
+    axis.text.x = element_blank(),
     panel.grid = element_blank(),
-    plot.background = element_rect(fill = "black"),
-    panel.background = element_rect(fill = "black"),
-    legend.background = element_rect(fill = "black"),
+    plot.background = element_rect(fill = "#0a203b"),
+    panel.background = element_rect(fill = "#0a203b"),
+    legend.background = element_rect(fill = "#0a203b"),
     plot.title = element_text(color = "white"),
     legend.text = element_text(color = "white"),
-    legend.title = element_text(color = "white")) 
+    legend.title = element_text(color = "white"),
+    axis.text.y = element_text(color = "white"),
+    plot.caption = element_text(color = "white"),
+    plot.subtitle = element_text(color = "white")) +
+  scale_fill_gradient(high = "#2473db", low = "#c3deff")
 G2
 
 ```
+
+
 ```{r}
 sleep %>% 
   ggplot() +
